# cpp-template

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/module/: CMakeLists.txt  module.cpp  module.hpp
src/: CMakeLists.txt  main.cpp
src/module/: module.cpp  module.hpp
tests/: CMakeLists.txt  test-base.cpp
tests/module/: test-module.cpp
